# tauri-plugin-keyboard-inset

./: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  rollup.config.js
android/: build.gradle.kts
android/src/main/java/: KeyboardInsetPlugin.kt
dist-js/: index.cjs  index.d.ts  index.js
guest-js/: index.ts
ios/: Package.swift  README.md
ios/Sources/: KeyboardInsetPlugin.swift
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
