[package]
name = "tauri-plugin-keyboard-inset"
version = "0.1.0"
authors = [ "Trias" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-keyboard-inset"

[dependencies]
tauri = { version = "2.11.1" }
serde = "1.0"
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.6.1", features = ["build"] }
